--- a/FrontEnd/ecommerce/src/App.css
+++ b/FrontEnd/ecommerce/src/App.css
@@ -11,6 +11,9 @@
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
+  --color-ef3939: #ef3939;
 }
 body {
   font-family: "Rubik", sans-serif;
@@ -21,6 +24,12 @@ a {
 }
 p {
   margin: 0;
+}
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 .form-control:focus {
   box-shadow: none;
@@ -218,6 +227,7 @@ footer .input-group-text {
   border-right: 1px solid var(--color-ededed);
 }
 /* Categories part end */
+
 /*Marquee wrapper part*/
 .marquee-wrapper img {
   width: 180%;
@@ -225,4 +235,99 @@ footer .input-group-text {
 }
 /*Marquee part end*/
 
+/* Blog part  */
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+.blog-card img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.card-content {
+  padding: 15px;
+}
+.card-content p {
+  margin-bottom: 10px;
+}
+.card-content .date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  padding: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+}
+
+.card-content h5 {
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.card-content p.desc {
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+/* Blog part end*/
+
+/*Product card*/
+.product-card {
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.product-card .wishlist {
+  top: 6px;
+  right: 17px;
+}
+.product-card .product-image {
+  height: 250px;
+}
+.product-card .product-image img {
+  object-fit: contain;
+}
+.product-card .product-image > img:last-child {
+  display: none;
+}
+.product-card:hover .product-image > img:first-child {
+  display: none;
+}
+.product-card:hover .product-image > img:last-child {
+  display: block;
+  transition: 0.3s;
+}
+.product-card .product-details h6 {
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+.product-card .product-details h5 {
+  color: var(--color-1c1c1b);
+  font-size: 15px;
+}
+.product-card .product-details p {
+  color: var(--color-1c1c1b);
+  font-size: 16px;
+}
+.product-card .action-bar {
+  top: 38px;
+  right: -20px;
+}
+.product-card:hover .action-bar {
+  right: 15px;
+  transition: 0.4s;
+}
+/*Product card end*/
+
+/*Special product*/
+.special-product-card {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: white;
+}
+.special-product-card .discount-till span {
+  background-color: var(--color-ef3939);
+}
+/*Special product end*/
 /*Home part end*/
