--- a/FrontEnd/ecommerce/src/App.css
+++ b/FrontEnd/ecommerce/src/App.css
@@ -269,6 +269,20 @@ footer .input-group-text {
   line-height: 22px;
   color: var(--color-777777);
 }
+.single-blog h3 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #1c1c1b;
+}
+.single-blog a {
+  font-size: 15px;
+  color: #777777;
+  margin-bottom: 20px;
+}
+.single-blog p {
+  font-size: 14px;
+  color: var(--color-777777);
+}
 /* Blog part end*/
 
 /*Product card*/
@@ -528,6 +542,10 @@ footer .input-group-text {
   padding: 30px 30px;
   border-radius: 20px;
 }
+.login-form p {
+  color: var(--color-777777);
+  font-size: 14px;
+}
 .login-form .form-control {
   height: 50px;
   background-color: var(--color-f5f5f7);
@@ -538,5 +556,8 @@ footer .input-group-text {
 .login-form .forgot-password {
   color: var(--color-1c1c1b);
   font-size: 15px;
+}
+.login-form h3 {
+  color: var(--color-777777);
 }
 /*Login end*/
