--- a/FrontEnd/ecommerce/src/App.css
+++ b/FrontEnd/ecommerce/src/App.css
@@ -14,6 +14,7 @@
   --color-777777: #777777;
   --color-1c1c1b: #1c1c1b;
   --color-ef3939: #ef3939;
+  --color-eaeaea: #eaeaea;
 }
 body {
   font-family: "Rubik", sans-serif;
@@ -561,3 +562,145 @@ footer .input-group-text {
   color: var(--color-777777);
 }
 /*Login end*/
+
+/* Single product begin*/
+.main-product-image {
+  background-color: white;
+  padding: 20px;
+}
+.main-product-image > div {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.main-product-image img {
+  width: 100% !important;
+  height: 500px !important;
+  object-fit: cover;
+}
+.other-product-images {
+  background-color: white;
+  padding: 20px;
+}
+.other-product-images > div {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  width: 48%;
+}
+.main-product-details {
+  padding: 30px 20px;
+  background-color: white;
+}
+.border-bottom {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.main-product-details a {
+  color: var(--color-777777);
+  font-size: 13px;
+}
+.main-product-details h3.title {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 10px;
+}
+.main-product-details p.price {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.product-heading {
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+  margin-bottom: 0px;
+}
+.product-data {
+  font-size: 13px;
+  color: var(--color-777777);
+  margin-bottom: 0px;
+}
+.description-wrapper h4,
+.review-wrapper h4 {
+  font-size: 26px;
+  color: var(--color-1c1c1b);
+  margin-bottom: 20px;
+}
+.review-inner-wrapper {
+  background-color: white;
+  padding: 30px;
+}
+.review-head {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+}
+.review-head h4 {
+  font-size: 18px;
+  color: var(--color-1c1c1b);
+}
+.review-head p,
+.review-head a {
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.review-form h4 {
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.review:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.review p {
+  font-size: 14px;
+  color: #777777;
+}
+/* Single product end*/
+
+/* Cart begin*/
+.cart-header {
+  border-bottom: 1px solid var(--color-eaeaea);
+}
+.cart-header h4 {
+  font-size: 15px;
+  color: var(--color-777777);
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.cart-col-1 {
+  width: 40%;
+}
+.cart-col-2 {
+  width: 15%;
+}
+.cart-col-3 {
+  width: 10%;
+}
+.cart-col-4 {
+  width: 10%;
+}
+.cart-data {
+  padding: 20px 0px;
+  border-bottom: 1px solid var(--color-eaeaea);
+}
+.cart-data img {
+  width: 75px;
+  height: 75px;
+}
+.cart-data h5.title {
+  font-size: 14px;
+  color: var(--color-777777);
+  font-weight: 400;
+  line-height: 20px;
+}
+.cart-data h4.price,
+.cart-data h4.total {
+  font-size: 18px;
+  color: var(--color-1c1c1b);
+}
+.cart-data .delete:hover {
+  cursor: pointer;
+  color: red;
+}
+.cart-footer p,
+h4 {
+  color: var(--color-777777);
+}
+/* Cart end */
